@@ -1,3 +1,9 @@
+2004-05-20  Aaron Faupell <afaupell@users.sourceforge.net>
+
+	* png.tcl: moved file opening and signature validation to
+		a seperate proc. added isPNG command.
+	* png.man: updated to include isPNG command
+
 2004-05-07  Andreas Kupries <andreas_kupries@users.sourceforge.net>
 
 	* New module for querying PMG images, and manipulating their
